--- a/media/css/style.css
+++ b/media/css/style.css
@@ -1,49 +1,205 @@
-.wrapper {
-    position: relative;
+/* UTILITIES */
+.form-control {
+    border: 0;
 }
 
-html, body, #main {
-    height: 100%
+small, .small {
+    font-size: 70%;
 }
 
-div.page-header {
-    display: none
-}
-
-#main {
-    position: absolute;
-    margin: 0;
-    overflow: hidden
-}
-
-.cycle-slideshow {
-    position: absolute;
-    width: 100%;
-    max-width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-.container {
-    position: absolute;
-    z-index: 99;
+.white {
     color: white;
 }
+.yellow{
+    color: rgb(255, 203, 8);
+}
 
-.cycle-slideshow img {
-    /* forced big images */
-    width: 2000px;
-    height: 1500px;
-    /* height drives width */
-    width: auto;
-    height: 100%;
-    /* width drives height */
+.bold {
+    font-weight: bold;
+}
+
+.btn.btn-algar{
+    margin-top: 10px;
+    background: rgba(0, 166, 81, 1);
+    text-transform: uppercase;
+    color: white;
+    font-weight: bold;
+    border-radius: 10px;
+    transition: background 0.2s ease-in-out;
+}
+.btn.btn-algar:hover{
+    background: rgba(0, 166, 81, 0.7);
+}
+
+
+input[type="text"], textarea {
+	background: none;
+	padding: 0 !important;
+	/* height: 30px !important; */
+	display: block;
     width: 100%;
+    box-shadow: none;
+    color: #6d6d6d;
+    border-bottom: 1px solid #525252 !important;
+	resize: none;
+    border-radius: 0 !important;
+}
+
+textarea {
+	height: 50px;
+}
+textarea.form-control {
     height: auto;
-    /* fill screen and maintain aspect ratio */
-    width: auto;
-    height: auto;
-    min-width: 100%;
+}
+input[type="checkbox"] {
+	-webkit-appearance: none;
+	float: left!important;
+	width: 15px;
+	height: 15px;
+	display: block;
+	float: left;
+	border-radius: 50%;
+	border: solid 1px #6d6d6d;
+	margin-right: 5px;
+}
+
+input[type="checkbox"]:checked {
+	background: #525252;
+}
+
+#nomeArquivo {
+    width: 140px;
+    height: 32px;
+    display: block;
+    border-radius: 10px;
+    border: solid 2px #a2a2a2;
+    text-align: center;
+    text-transform: uppercase;
+    color: #6d6d6d;
+    cursor: pointer;
+    line-height: 30px;
+    margin-right: 10px;
+}
+
+form div img.pull-left {
+	margin-left: 10px;
+}
+
+/* FANCYBOX */
+#hidden-content {
+    max-width: 60%;
+    margin-top: 0 auto;
+}
+/* FOOTER */
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 150px;
+  background-color: transparent;
+}
+
+/* CONFIG DEEFAULT + BACKGROUND SLIDER */
+
+
+body {
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+    font-size: 16px;
+}
+
+html {
+    position: relative;
     min-height: 100%;
+}
+.carousel-fade .carousel-inner .item {
+    opacity: 0;
+    transition-property: opacity;
+}
+.carousel-fade .carousel-inner .active {
+    opacity: 1;
+}
+.carousel-fade .carousel-inner .active.left,
+.carousel-fade .carousel-inner .active.right {
+    left: 0;
+    opacity: 0;
+    z-index: 1;
+}
+.carousel-fade .carousel-inner .next.left,
+.carousel-fade .carousel-inner .prev.right {
+    opacity: 1;
+}
+.carousel-fade .carousel-control {
+    z-index: 2;
+}
+@media all and (transform-3d), (-webkit-transform-3d) {
+    .carousel-fade .carousel-inner > .item.next,
+    .carousel-fade .carousel-inner > .item.active.right {
+        opacity: 0;
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
+    .carousel-fade .carousel-inner > .item.prev,
+    .carousel-fade .carousel-inner > .item.active.left {
+        opacity: 0;
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
+    .carousel-fade .carousel-inner > .item.next.left,
+    .carousel-fade .carousel-inner > .item.prev.right,
+    .carousel-fade .carousel-inner > .item.active {
+        opacity: 1;
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
+}
+.item:nth-child(1) {
+    background-image:url('../img/bg_1.png');
+    background-repeat: no-repeat;
+    background-position: left center;
+    background-attachment: fixed;
+    /* background: transparent url('media/img/bg_1.png') no-repeat left center fixed; */
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+.item:nth-child(2) {
+    background-image:url('../img/bg_2.png');
+    background-repeat: no-repeat;
+    background-position: left center;
+    background-attachment: fixed;
+    /* background: transparent url('media/img/bg_2.png') no-repeat left center fixed; */
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+.item:nth-child(3) {
+    background-image:url('../img/bg_3.png');
+    background-repeat: no-repeat;
+    background-position: left center;
+    background-attachment: fixed;
+    /* background: transparent url('media/img/bg_3.png') no-repeat left center fixed; */
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.carousel {
+    z-index: -99;
+}
+.carousel .item {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+}
+.title {
+  text-align: center;
+  margin-top: 20px;
+  padding: 10px;
+  text-shadow: 2px 2px #000;
+  color: #FFF;
 }
